Finished app functionality

--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -9,5 +9,5 @@
 		</div>
 	</div>
 	<%= button_tag "Add Time", type: :button, class: 'btn inverse pull-left', id: 'addTime' %>
-	<%= button_tag "Do it!", :class => "btn btn-primary pull-right", disabled: "disabled" %>
+	<%= button_tag "Do it!", :class => "btn btn-primary pull-right", disabled: "disabled", id: 'submit-btn' %>
 <% end %>
