--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -18,16 +18,16 @@
 			<% time =  @date.change({:hour => hour, :min => 0, :sec => 0}) %>
 			<% today = @forecast.hourly.data.select{ |x| x['time'] == time.to_i }.first %>
 			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time-1.day).to_i }.first %>
-			<% if today.precipProbability %>
+			<% unless today.precipProbability.nil? %>
 			<% today.precipProbability.to_f*100 > 50 ? @gear.rain = true : @gear.rain = false %>
 			<% end %>
-			<% if today.precipProbability %>
+			<% unless today.precipProbability.nil? %>
 			<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : @gear.goggles = false %>
 			<% end %>
-			<% if today.windSpeed %>
+			<% unless today.windSpeed.nil? %>
 			<% today.windSpeed > 5 ? @gear.wind = true : @gear.wind = false %>
 			<% end %>
-			<% if today.cloudCover %>
+			<% unless today.cloudCover.nil? %>
 			<% today.cloudCover.to_f*100 < 40 ? @gear.sunglasses = true : @gear.sunglasses = false %>
 			<% end %>
 
