--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -18,19 +18,12 @@
 			<% time =  @date.change({:hour => hour, :min => 0, :sec => 0}) %>
 			<% today = @forecast.hourly.data.select{ |x| x['time'] == time.to_i }.first %>
 			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time-1.day).to_i }.first %>
-			<% unless today.precipProbability.nil? %>
-			<% today.precipProbability.to_f*100 > 50 ? @gear.rain = true : @gear.rain = false %>
+			<% if today %>
+				<% today.precipProbability.to_f*100 > 50 ? @gear.rain = true : @gear.rain = false %>
+				<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : @gear.goggles = false %>
+				<% today.windSpeed > 5 ? @gear.wind = true : @gear.wind = false %>
+				<% today.cloudCover.to_f*100 < 40 ? @gear.sunglasses = true : @gear.sunglasses = false %>
 			<% end %>
-			<% unless today.precipProbability.nil? %>
-			<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : @gear.goggles = false %>
-			<% end %>
-			<% unless today.windSpeed.nil? %>
-			<% today.windSpeed > 5 ? @gear.wind = true : @gear.wind = false %>
-			<% end %>
-			<% unless today.cloudCover.nil? %>
-			<% today.cloudCover.to_f*100 < 40 ? @gear.sunglasses = true : @gear.sunglasses = false %>
-			<% end %>
-
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
 					<li>Summary: <%= today.summary %></li>
