--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -18,24 +18,25 @@
 			<% time =  @date.change({:hour => hour, :min => 0, :sec => 0}) %>
 			<% today = @forecast.hourly.data.select{ |x| x['time'] == time.to_i }.first %>
 			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time-1.day).to_i }.first %>
-
-			<p><%= today.to_json %></p>
-
+				<% today['precipProbability'].to_f*100 > 50 ? @gear.rain = true : @gear.rain = false %>
+				<% today['precipProbability'].to_f*100 > 50 ? @gear.goggles = true : @gear.goggles = false %>
+				<% today['windSpeed'] > 5 ? @gear.wind = true : @gear.wind = false %>
+				<% today['cloudCover'].to_f*100 < 40 ? @gear.sunglasses = true : @gear.sunglasses = false %>
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
-					<li>Summary: <%= today.summary %></li>
-					<li>Temperature: <%= today.temperature.round %>°</li>
-					<li>Percipitation Chance: <%= number_to_percentage(today.precipProbability.to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= today.windSpeed %> MPH</li>
-					<li>Icon: <%= today.icon %></li>
+					<li>Summary: <%= today['summary'] %></li>
+					<li>Temperature: <%= today['temperature'].round %>°</li>
+					<li>Percipitation Chance: <%= number_to_percentage(today['precipProbability'].to_f*100, :precision => 0) %></li>
+					<li>Wind Speed: <%= today['windSpeed'] %> MPH</li>
+					<li>Icon: <%= today['icon'] %></li>
 				</ul>
 			<%= @date.today? ? 'Yesterday:' : 'Previous Day:' %> 
 				<ul>
-					<li>Summary: <%= yesterday.summary %></li>
-					<li>Temperature: <%= yesterday.temperature.round %>°</li>
+					<li>Summary: <%= yesterday['summary'] %></li>
+					<li>Temperature: <%= yesterday['temperature'].round %>°</li>
 					<li>Percipitation Chance: <%= number_to_percentage(yesterday.precipProbability.to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= yesterday.windSpeed %> MPH</li>
-					<li>Icon: <%= yesterday.icon %></li>
+					<li>Wind Speed: <%= yesterday['windSpeed'] %> MPH</li>
+					<li>Icon: <%= yesterday['icon'] %></li>
 				</ul>
 		</div>
 		<br/><br/>
@@ -50,24 +51,25 @@
 			<% time =  @date.change({:hour => hour, :min => 0, :sec => 0}) %>
 			<% today = @forecast.hourly.data.select{ |x| x['time'] == time.to_i }.first %>
 			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time-1.day).to_i }.first %>
-
-			<p><%= today.to_json %></p>
-
+			<% today['precipProbability'].to_f*100 > 50 ? @gear.rain = true : @gear.rain = false %>
+			<% today['precipProbability'].to_f*100 > 50 ? @gear.goggles = true : @gear.goggles = false %>
+			<% today['windSpeed'] > 5 ? @gear.wind = true : @gear.wind = false %>
+			<% today['cloudCover'].to_f*100 < 40 ? @gear.sunglasses = true : @gear.sunglasses = false %>
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
-					<li>Summary: <%= today.summary %></li>
-					<li>Temperature: <%= today.temperature.round %>°</li>
-					<li>Percipitation Chance: <%= number_to_percentage(today.precipProbability.to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= today.windSpeed %> MPH</li>
-					<li>Icon: <%= today.icon %></li>
+					<li>Summary: <%= today['summary'] %></li>
+					<li>Temperature: <%= today['temperature'].round %>°</li>
+					<li>Percipitation Chance: <%= number_to_percentage(today['precipProbability'].to_f*100, :precision => 0) %></li>
+					<li>Wind Speed: <%= today['windSpeed'] %> MPH</li>
+					<li>Icon: <%= today['icon'] %></li>
 				</ul>
 			<%= @date.today? ? 'Yesterday:' : 'Previous Day:' %> 
 				<ul>
-					<li>Summary: <%= yesterday.summary %></li>
-					<li>Temperature: <%= yesterday.temperature.round %>°</li>
+					<li>Summary: <%= yesterday['summary'] %></li>
+					<li>Temperature: <%= yesterday['temperature'].round %>°</li>
 					<li>Percipitation Chance: <%= number_to_percentage(yesterday.precipProbability.to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= yesterday.windSpeed %> MPH</li>
-					<li>Icon: <%= yesterday.icon %></li>
+					<li>Wind Speed: <%= yesterday['windSpeed'] %> MPH</li>
+					<li>Icon: <%= yesterday['icon'] %></li>
 				</ul>
 		</div>
 		<br/><br/>
