--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -55,11 +55,14 @@
 			<% @timeLoop =  @date.change({:hour => @hourLoop, :min => 0, :sec => 0}) %>
 			<% @todayLoop = @forecast.hourly.data.select{ |x| x["time"] == @timeLoop.to_i }.first %>
 			<% @yesterdayLoop = @yesterday.hourly.data.select{ |x| x["time"] == (@timeLoop-1.day).to_i }.first %>
-			<% puts @todayLoop.to_json %>
-			<% @todayLoop["precipProbability"].to_f*100 > 50 ? @gear.rain = true : '' %>
-			<% @todayLoop["precipProbability"].to_f*100 > 50 ? @gear.goggles = true : '' %>
-			<% @todayLoop["windSpeed"] > 5 ? @gear.wind = true : '' %>
-			<% @todayLoop["cloudCover"].to_f*100 < 40 ? @gear.sunglasses = true : '' %>
+			<% puts "------------------- Rain"%>
+				<% @todayLoop["precipProbability"].to_f*100 > 50 ? @gear.rain = true : '' %>
+				<% puts "------------------- Goggles"%>
+				<% @todayLoop["precipProbability"].to_f*100 > 50 ? @gear.goggles = true : '' %>
+				<% puts "------------------- Wind"%>
+				<% @todayLoop["windSpeed"] > 5 ? @gear.wind = true : '' %>
+				<% puts "------------------- Sunglasses"%>
+				<% @todayLoop["cloudCover"].to_f*100 < 40 ? @gear.sunglasses = true : '' %>
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
 					<li>Summary: <%= @todayLoop["summary"] %></li>
