--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -1,9 +1,9 @@
 <h2>Location: 
-<%= @search["address_components"].select{ |x| x["types"] == ["locality","political"]}.first["short_name"] %>,
-<% unless @search["address_components"].select{ |x| x["types"] == ["administrative_area_level_1","political"]} %> 
-	<%= @search["address_components"].select{ |x| x["types"] == ["administrative_area_level_1","political"]}.first["short_name"] %>
+<%= @search['address_components'].select{ |x| x['types'] == ['locality','political']}.first['short_name'] %>,
+<% unless @search['address_components'].select{ |x| x['types'] == ['administrative_area_level_1','political']} %> 
+	<%= @search['address_components'].select{ |x| x['types'] == ['administrative_area_level_1','political']}.first['short_name'] %>
 <% else %>
-	<%= @search["address_components"].select{ |x| x["types"] == ["country","political"]}.first["short_name"] %>
+	<%= @search['address_components'].select{ |x| x['types'] == ['country','political']}.first['short_name'] %>
 <% end %>
 </h2>
 <div id="map-canvas" style="width:100%;height:250px;"></div>
@@ -12,35 +12,32 @@
 	<h3>Selected Date <%= @date.to_date.to_formatted_s(:long_ordinal) %></h3>
 	<% session[:times].each do |array, t| %>
 		<div class="result">
-			Time: <%= t["h"] %> <%= t["ampm"] %> <br/>
+			Time: <%= t['h'] %> <%= t['ampm'] %> <br/>
 			<!-- # Calculations going on here, setting variables and what no to get data -->			
-			<% @hourLoop = t["ampm"] == 'PM' ? t["h"].to_i + 12 : t["h"].to_i %>
-			<% @timeLoop =  @date.change({:hour => @hourLoop, :min => 0, :sec => 0}) %>
-			<% @todayLoop = @forecast.hourly.data.select{ |x| x["time"] == @timeLoop.to_i }.first %>
-			<% @yesterdayLoop = @yesterday.hourly.data.select{ |x| x["time"] == (@timeLoop-1.day).to_i }.first %>
-			<% puts "------------------- Rain"%>
-				<% @todayLoop["precipProbability"].to_f*100 > 50 ? @gear.rain = true : '' %>
-				<% puts "------------------- Goggles"%>
-				<% @todayLoop["precipProbability"].to_f*100 > 50 ? @gear.goggles = true : '' %>
-				<% puts "------------------- Wind"%>
-				<% @todayLoop["windSpeed"] > 5 ? @gear.wind = true : '' %>
-				<% puts "------------------- Sunglasses"%>
-				<% @todayLoop["cloudCover"].to_f*100 < 40 ? @gear.sunglasses = true : '' %>
+			<% hour = t['ampm'] == 'PM' ? t['h'].to_i + 12 : t['h'].to_i %>
+			<% time =  @date.change({:hour => hour}).round(1.hour) %>
+			<% today = @forecast.hourly.data.select{ |x| x['time'] == time.to_i }.first %>
+			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time-1.day).to_i }.first %>
+			<% today.precipProbability.to_f*100 > 50 ? @gear.rain = true : @gear.rain = false %>
+			<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : @gear.goggles = false %>
+			<% today.windSpeed > 5 ? @gear.wind = true : @gear.wind = false %>
+			<% today.cloudCover.to_f*100 < 40 ? @gear.sunglasses = true : @gear.sunglasses = false %>
+
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
-					<li>Summary: <%= @todayLoop["summary"] %></li>
-					<li>Temperature: <%= @todayLoop["temperature"].round %>°</li>
-					<li>Percipitation Chance: <%= number_to_percentage(@todayLoop["precipProbability"].to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= @todayLoop["windSpeed"] %> MPH</li>
-					<li>Icon: <%= @todayLoop["icon"] %></li>
+					<li>Summary: <%= today.summary %></li>
+					<li>Temperature: <%= today.temperature.round %>°</li>
+					<li>Percipitation Chance: <%= number_to_percentage(today.precipProbability.to_f*100, :precision => 0) %></li>
+					<li>Wind Speed: <%= today.windSpeed %> MPH</li>
+					<li>Icon: <%= today.icon %></li>
 				</ul>
 			<%= @date.today? ? 'Yesterday:' : 'Previous Day:' %> 
 				<ul>
-					<li>Summary: <%= @yesterdayLoop["summary"] %></li>
-					<li>Temperature: <%= @yesterdayLoop["temperature"].round %>°</li>
-					<li>Percipitation Chance: <%= number_to_percentage(@yesterdayLoop.precipProbability.to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= @yesterdayLoop["windSpeed"] %> MPH</li>
-					<li>Icon: <%= @yesterdayLoop["icon"] %></li>
+					<li>Summary: <%= yesterday.summary %></li>
+					<li>Temperature: <%= yesterday.temperature.round %>°</li>
+					<li>Percipitation Chance: <%= number_to_percentage(yesterday.precipProbability.to_f*100, :precision => 0) %></li>
+					<li>Wind Speed: <%= yesterday.windSpeed %> MPH</li>
+					<li>Icon: <%= yesterday.icon %></li>
 				</ul>
 		</div>
 		<br/><br/>
@@ -49,35 +46,31 @@
 	<h3>Selected Date <%= @date.to_date.to_formatted_s(:long_ordinal) %></h3>
 	<% params[:times].each do |array, t| %>
 		<div class="result">
-			Time: <%= t["h"] %> <%= t["ampm"] %> <br/>
+			Time: <%= t['h'] %> <%= t['ampm'] %> <br/>
 			<!-- # Calculations going on here, setting variables and what no to get data -->			
-			<% @hourLoop = t["ampm"] == 'PM' ? t["h"].to_i + 12 : t["h"].to_i %>
-			<% @timeLoop =  @date.change({:hour => @hourLoop, :min => 0, :sec => 0}) %>
-			<% @todayLoop = @forecast.hourly.data.select{ |x| x["time"] == @timeLoop.to_i }.first %>
-			<% @yesterdayLoop = @yesterday.hourly.data.select{ |x| x["time"] == (@timeLoop-1.day).to_i }.first %>
-			<% puts "------------------- Rain"%>
-				<% @todayLoop.precipProbability.to_f*100 > 50 %>
-				<% puts "------------------- Goggles"%>
-				<% @todayLoop.precipProbability.to_f*100 > 50 %>
-				<% puts "------------------- Wind"%>
-				<% @todayLoop.windSpeed > 5 %>
-				<% puts "------------------- Sunglasses"%>
-				<% @todayLoop.cloudCover.to_f*100 < 40 %>
+			<% hour = t['ampm'] == 'PM' ? t['h'].to_i + 12 : t['h'].to_i %>
+			<% time =  @date.change({:hour => hour}).round(1.hour) %>
+			<% today = @forecast.hourly.data.select{ |x| x['time'] == time.to_i }.first %>
+			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time-1.day).to_i }.first %>
+			<% today.precipProbability.to_f*100 > 50 ? @gear.rain = true : @gear.rain = false %>
+			<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : @gear.goggles = false %>
+			<% today.windSpeed > 5 ? @gear.wind = true : @gear.wind = false %>
+			<% today.cloudCover.to_f*100 < 40 ? @gear.sunglasses = true : @gear.sunglasses = false %>
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
-					<li>Summary: <%= @todayLoop["summary"] %></li>
-					<li>Temperature: <%= @todayLoop["temperature"].round %>°</li>
-					<li>Percipitation Chance: <%= number_to_percentage(@todayLoop["precipProbability"].to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= @todayLoop["windSpeed"] %> MPH</li>
-					<li>Icon: <%= @todayLoop["icon"] %></li>
+					<li>Summary: <%= today.summary %></li>
+					<li>Temperature: <%= today.temperature.round %>°</li>
+					<li>Percipitation Chance: <%= number_to_percentage(today.precipProbability.to_f*100, :precision => 0) %></li>
+					<li>Wind Speed: <%= today.windSpeed %> MPH</li>
+					<li>Icon: <%= today.icon %></li>
 				</ul>
 			<%= @date.today? ? 'Yesterday:' : 'Previous Day:' %> 
 				<ul>
-					<li>Summary: <%= @yesterdayLoop["summary"] %></li>
-					<li>Temperature: <%= @yesterdayLoop["temperature"].round %>°</li>
-					<li>Percipitation Chance: <%= number_to_percentage(@yesterdayLoop.precipProbability.to_f*100, :precision => 0) %></li>
-					<li>Wind Speed: <%= @yesterdayLoop["windSpeed"] %> MPH</li>
-					<li>Icon: <%= @yesterdayLoop["icon"] %></li>
+					<li>Summary: <%= yesterday.summary %></li>
+					<li>Temperature: <%= yesterday.temperature.round %>°</li>
+					<li>Percipitation Chance: <%= number_to_percentage(yesterday.precipProbability.to_f*100, :precision => 0) %></li>
+					<li>Wind Speed: <%= yesterday.windSpeed %> MPH</li>
+					<li>Icon: <%= yesterday.icon %></li>
 				</ul>
 		</div>
 		<br/><br/>
@@ -95,7 +88,7 @@
 	function initialize() {
 	  var mapOptions = {
 	    zoom: 13,
-	    center: new google.maps.LatLng(<%= @search["geometry"]["location"]["lat"] %>, <%= @search["geometry"]["location"]["lng"] %>),
+	    center: new google.maps.LatLng(<%= @search['geometry']['location']['lat'] %>, <%= @search['geometry']['location']['lng'] %>),
 	    mapTypeId: google.maps.MapTypeId.ROADMAP
 	  };
 	  map = new google.maps.Map(document.getElementById('map-canvas'),
