--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -53,7 +53,7 @@
 			<% time = @date.change({:hour => hour}).to_time %>
 			<% time = Time.new(time.year, time.month, time.day, time.hour, time.min, time.sec, time.zone).round(1.hour) %>
 			<% today = @forecast.hourly.data.select{ |x| x['time'] == time.to_i }.first %>
-			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time-1.day).to_i }.first %>
+			<% yesterday = @yesterday.hourly.data.select{ |x| x['time'] == (time.to_i - 1.day)}.first %>
 			<% today.precipProbability.to_f*100 > 50 ? @gear.rain = true : "" %>
 			<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : "" %>
 			<% today.windSpeed > 5 ? @gear.wind = true : "" %>
