--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -23,6 +23,7 @@
 			<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : "" %>
 			<% today.windSpeed > 5 ? @gear.wind = true : "" %>
 			<% today.cloudCover.to_f*100 < 40 ? @gear.sunglasses = true : "" %>
+			<% today.temperature.round < 50 ? @gear.warm = true : "" %>
 
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
@@ -58,6 +59,7 @@
 			<% today.precipProbability.to_f*100 > 50 ? @gear.goggles = true : "" %>
 			<% today.windSpeed > 5 ? @gear.wind = true : "" %>
 			<% today.cloudCover.to_f*100 < 40 ? @gear.sunglasses = true : "" %>
+			<% today.temperature.round < 50 ? @gear.warm = true : "" %>
 			<%= @date.today? ? 'Today:' : 'Day of:' %> 
 				<ul>
 					<li>Summary: <%= today.summary %></li>
