--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -84,7 +84,7 @@
 	<h3>You should bring</h3>
 	<%= @gear.rain ? "<h5>Rain Gear</h5>".html_safe : "" %>
 	<%= @gear.goggles ? "<h5>Goggles</h5>".html_safe : "" %>
-	<%= @gear.wind ? "<h5>Windproof Apparael</h5>".html_safe : "" %>
+	<%= @gear.wind ? "<h5>Windproof Apparel</h5>".html_safe : "" %>
 	<%= @gear.sunglasses ? "<h5>Sunglasses</h5>".html_safe : "" %>
 </div>
 <script>
