Fixed Google map issue caused by Bootstrap

--- a/app/views/frontend/results.html.erb
+++ b/app/views/frontend/results.html.erb
@@ -3,7 +3,7 @@
 </h2>
 <div class="row-fluid">
 	<div class="span12">
-		<div id="map-canvas" style="width:100%;height:250px;"></div>
+		<div id="map-canvas" class="google-maps" style="width:100%;height:250px;"></div>
 	</div>
 	<a href="/">Go Again</a>
 </div>
